WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139320
If the action menu hit test times out, a menu with a single separator appears
https://bugs.webkit.org/show_bug.cgi?id=139320
Summary
If the action menu hit test times out, a menu with a single separator appears
Tim Horton
Reported
2014-12-05 15:54:28 PST
If the action menu hit test times out, a menu with a single separator appears
Attachments
Patch
(3.74 KB, patch)
2014-12-05 15:55 PST
,
Tim Horton
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-12-05 15:55:03 PST
Created
attachment 242671
[details]
Patch
Tim Horton
Comment 2
2014-12-05 15:59:02 PST
http://trac.webkit.org/changeset/176883
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug